style: fixing spacing

--- a/src/components/Posts/_index.scss
+++ b/src/components/Posts/_index.scss
@@ -2,6 +2,7 @@
   padding: 0 $sidePadding;
   @include grid;
   flex-wrap: wrap;
+  justify-content: space-between;
 }
 
 @media (max-width: $breakpoint-mobile) {
